--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                 localStorage.setItem('username', username);
 
                 // Redirect to main app
-                window.location.href = 'index.html';
+                window.location.href = 'dashboard.html';
             } else {
                 // Show error
                 errorMessage.textContent = '❌ ชื่อผู้ใช้หรือรหัสผ่านไม่ถูกต้อง';
