Add social name to quick add customer form and search

--- a/dashboard.html
+++ b/dashboard.html
@@ -321,6 +321,12 @@
             <input type="text" class="form-input" id="customer-name" required>
             <div class="form-error">กรุณากรอกชื่อ-นามสกุล</div>
           </div>
+          <div class="form-group">
+            <label class="form-label">ชื่อโซเชียล / ชื่อเล่น</label>
+            <input type="text" class="form-input" id="customer-social-name"
+              placeholder="เช่น เพจ สุนัขน่ารัก, ไลน์ แม่หมี">
+            <small class="text-muted">ชื่อที่ใช้ติดต่อในโซเชียลมีเดีย (Facebook, Line, etc.)</small>
+          </div>
           <div class="form-row">
             <div class="form-group">
               <label class="form-label required">เบอร์โทร</label>
@@ -516,6 +522,11 @@
                 <div class="form-group">
                   <input type="text" class="form-input" id="quick-customer-name" placeholder="ชื่อ-นามสกุล *">
                 </div>
+                <div class="form-group">
+                  <input type="text" class="form-input" id="quick-customer-social-name" placeholder="ชื่อโซเชียล">
+                </div>
+              </div>
+              <div class="form-row">
                 <div class="form-group">
                   <input type="tel" class="form-input" id="quick-customer-phone" placeholder="เบอร์โทร *">
                 </div>
