style: update logout icon to modern SVG

--- a/dashboard.html
+++ b/dashboard.html
@@ -67,8 +67,13 @@
           <h4 id="current-user">Admin</h4>
           <p>ผู้ดูแลระบบ</p>
         </div>
-        <button class="btn btn-sm btn-secondary" onclick="app.logout()" style="margin-left:auto; padding: 0.4rem;">
-          🚪
+        <button class="btn-logout" onclick="app.logout()" title="ออกจากระบบ">
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"
+            stroke-linecap="round" stroke-linejoin="round">
+            <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
+            <polyline points="16 17 21 12 16 7"></polyline>
+            <line x1="21" y1="12" x2="9" y2="12"></line>
+          </svg>
         </button>
       </div>
     </aside>
