feat: Add transport icon, admin tracking, big dog service, and redesign time slots

--- a/dashboard.html
+++ b/dashboard.html
@@ -697,6 +697,7 @@
               <label><input type="checkbox" name="service-type" value="อาบน้ำ-ตัดขน ด้วยปัตตาเลี่ยน"> อาบน้ำ-ตัดขน
                 ด้วยปัตตาเลี่ยน</label>
               <label><input type="checkbox" name="service-type" value="อาบน้ำ พร้อมทำสปา"> อาบน้ำ พร้อมทำสปา</label>
+              <label><input type="checkbox" name="service-type" value="หมาใหญ่"> หมาใหญ่</label>
               <label><input type="checkbox" name="service-type" value="ฝากเลี้ยง"> ฝากเลี้ยง</label>
               <label><input type="checkbox" name="service-type" value="อื่นๆ"> อื่นๆ</label>
             </div>
