--- a/dashboard.html
+++ b/dashboard.html
@@ -586,22 +586,32 @@
       <div class="modal-body">
         <form id="form-queue">
           <div class="form-group">
-            <label class="form-label">🔍 ค้นหาลูกค้า</label>
-            <input type="text" class="form-input" id="customer-search-input" placeholder="พิมพ์ชื่อหรือเบอร์โทร..."
-              autocomplete="off">
-            <div id="customer-search-results" class="search-results-dropdown"></div>
-          </div>
-
-          <div class="form-group">
             <label class="form-label required">ลูกค้า</label>
-            <div class="quick-add-container">
-              <select class="form-select" id="queue-customer" required onchange="app.loadPetsByCustomer()">
-                <option value="">-- เลือกลูกค้า --</option>
-              </select>
-              <button type="button" class="btn btn-sm btn-success" onclick="app.toggleQuickAddCustomer()">
-                ➕ เพิ่มลูกค้าใหม่
+
+            <!-- Search Mode -->
+            <div id="customer-selection-container">
+              <input type="text" class="form-input" id="customer-search-input"
+                placeholder="🔍 ค้นหาชื่อ หรือ เบอร์โทร... (พิมพ์เพื่อเริ่ม)" autocomplete="off">
+              <div id="customer-search-results" class="search-results-dropdown"></div>
+            </div>
+
+            <!-- Selected Mode (Card) -->
+            <div id="selected-customer-card" style="display: none;" class="customer-card-selected">
+              <div class="customer-card-icon">👤</div>
+              <div class="customer-card-info">
+                <div class="customer-card-name" id="selected-customer-name">-</div>
+                <div class="customer-card-phone" id="selected-customer-phone">-</div>
+              </div>
+              <button type="button" class="btn-change-customer" onclick="app.clearCustomerSelection()"
+                title="เปลี่ยนลูกค้า">
+                ✕
               </button>
             </div>
+
+            <!-- Hidden Select for logic compatibility -->
+            <select id="queue-customer" style="display: none;" required onchange="app.loadPetsByCustomer()">
+              <option value="">-- เลือกลูกค้า --</option>
+            </select>
             <div class="form-error">กรุณาเลือกลูกค้า</div>
 
             <!-- Quick Add Customer Form -->
@@ -742,6 +752,12 @@
             </select>
           </div>
           <div class="form-group">
+            <label class="form-label">คนลงคิว (ถ้ามี)</label>
+            <select class="form-select" id="queue-booker">
+              <option value="">-- เลือกคนลงคิว --</option>
+            </select>
+          </div>
+          <div class="form-group">
             <label class="form-label">หมายเหตุ</label>
             <textarea class="form-textarea" id="queue-notes"></textarea>
             <div style="margin-top: 0.5rem; display: flex; gap: 0.5rem; flex-wrap: wrap;">
@@ -813,24 +829,44 @@
             <input type="number" class="form-input" id="checkin-weight" step="0.1" min="0" required />
             <small class="text-muted">น้ำหนักล่าสุด: <span id="last-weight-display">-</span></small>
           </div>
+
+          <!-- Services (Editable) -->
+          <div class="form-group">
+            <label class="form-label">บริการหลัก (แก้ไขได้)</label>
+            <div style="display: flex; flex-direction: column; gap: 0.5rem; margin-top: 0.5rem;"
+              id="checkin-services-container">
+              <label><input type="checkbox" name="checkin-service-type" value="อาบน้ำ"> อาบน้ำ</label>
+              <label><input type="checkbox" name="checkin-service-type" value="อาบน้ำ-ตัดขน ด้วยกรรไกร"> อาบน้ำ-ตัดขน
+                ด้วยกรรไกร</label>
+              <label><input type="checkbox" name="checkin-service-type" value="อาบน้ำ-ตัดขน ด้วยปัตตาเลี่ยน">
+                อาบน้ำ-ตัดขน
+                ด้วยปัตตาเลี่ยน</label>
+              <label><input type="checkbox" name="checkin-service-type" value="อาบน้ำ พร้อมทำสปา"> อาบน้ำ
+                พร้อมทำสปา</label>
+              <label><input type="checkbox" name="checkin-service-type" value="หมาใหญ่"> หมาใหญ่</label>
+              <label><input type="checkbox" name="checkin-service-type" value="ฝากเลี้ยง"> ฝากเลี้ยง</label>
+              <label><input type="checkbox" name="checkin-service-type" value="อื่นๆ"> อื่นๆ</label>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label class="form-label">บริการเสริม (แก้ไขได้)</label>
+            <div style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 0.5rem; margin-top: 0.5rem;"
+              id="checkin-addons-container">
+              <label><input type="checkbox" name="checkin-service-addon" value="ตัดเล็บ"> ตัดเล็บ</label>
+              <label><input type="checkbox" name="checkin-service-addon" value="โรมขนอุ้งเท้า/ท้อง/ก้น"> โรมขน
+                (เท้า/ท้อง/ก้น)</label>
+              <label><input type="checkbox" name="checkin-service-addon" value="เช็ดหู"> เช็ดหู</label>
+              <label><input type="checkbox" name="checkin-service-addon" value="สางสังกะตัง"> สางสังกะตัง</label>
+              <label><input type="checkbox" name="checkin-service-addon" value="กำจัดเห็บหมัด"> กำจัดเห็บหมัด</label>
+              <label><input type="checkbox" name="checkin-service-addon" value="แปรงฟัน"> แปรงฟัน</label>
+            </div>
+          </div>
+
           <div class="form-group">
             <label class="form-label">หมายเหตุพิเศษ</label>
             <textarea class="form-textarea" id="checkin-notes" rows="4"
               placeholder="เช่น แมวดุ, มีเห็บหมัด, มีแผล, กลัวน้ำ, อื่นๆ"></textarea>
-            <div style="margin-top: 0.5rem; display: flex; gap: 0.5rem; flex-wrap: wrap;">
-              <button type="button" class="btn btn-sm btn-outline-secondary"
-                onclick="app.appendNote('checkin-notes', 'แมวดุ')">แมวดุ</button>
-              <button type="button" class="btn btn-sm btn-outline-secondary"
-                onclick="app.appendNote('checkin-notes', 'สุนัขดุ')">สุนัขดุ</button>
-              <button type="button" class="btn btn-sm btn-outline-secondary"
-                onclick="app.appendNote('checkin-notes', 'มีเห็บหมัด')">มีเห็บหมัด</button>
-              <button type="button" class="btn btn-sm btn-outline-secondary"
-                onclick="app.appendNote('checkin-notes', 'กลัวน้ำ')">กลัวน้ำ</button>
-              <button type="button" class="btn btn-sm btn-outline-secondary"
-                onclick="app.appendNote('checkin-notes', 'มีแผล')">มีแผล</button>
-              <button type="button" class="btn btn-sm btn-outline-secondary"
-                onclick="app.appendNote('checkin-notes', 'ขนพัน')">ขนพัน</button>
-            </div>
 
             <!-- Quick note buttons -->
             <div class="quick-notes" style="margin-top: 0.5rem;">
