fix: resize image previews, improve completion sync, and add manual refresh button

--- a/dashboard.html
+++ b/dashboard.html
@@ -87,6 +87,9 @@
             <h2>แดชบอร์ด</h2>
             <div class="breadcrumb">หน้าหลัก / แดชบอร์ด</div>
           </div>
+          <button class="btn btn-outline-secondary btn-sm" onclick="app.syncData()" title="ซิงค์ข้อมูลล่าสุด">
+            🔄 ซิงค์ข้อมูล
+          </button>
         </div>
 
         <!-- Stats Cards -->
@@ -145,9 +148,14 @@
         <div class="page-header">
           <div class="page-title">
             <h2>คิววันนี้</h2>
-            <button class="btn btn-primary" onclick="app.showAddQueueModal()">
-              <span>➕</span> เพิ่มคิวใหม่
-            </button>
+            <div style="display: flex; gap: 0.5rem;">
+              <button class="btn btn-outline-secondary btn-sm" onclick="app.syncData()" title="ซิงค์ข้อมูลล่าสุด">
+                🔄 ซิงค์ข้อมูล
+              </button>
+              <button class="btn btn-primary" onclick="app.showAddQueueModal()">
+                <span>➕</span> เพิ่มคิวใหม่
+              </button>
+            </div>
           </div>
         </div>
 
