feat: add 'Other' (อื่นๆ) pet type option

--- a/dashboard.html
+++ b/dashboard.html
@@ -482,6 +482,7 @@
                 <option value="">-- เลือกประเภท --</option>
                 <option value="dog">สุนัข</option>
                 <option value="cat">แมว</option>
+                <option value="other">อื่นๆ</option>
               </select>
               <div class="form-error">กรุณาเลือกประเภท</div>
             </div>
@@ -679,6 +680,7 @@
                     <option value="">-- ประเภท --</option>
                     <option value="dog">สุนัข</option>
                     <option value="cat">แมว</option>
+                    <option value="other">อื่นๆ</option>
                   </select>
                 </div>
               </div>
@@ -735,7 +737,7 @@
             <label class="form-label">บริการเสริม (Add-ons)</label>
             <div style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 0.5rem; margin-top: 0.5rem;">
               <label><input type="checkbox" name="service-addon" value="ตัดเล็บ"> ตัดเล็บ</label>
-              <label><input type="checkbox" name="service-addon" value="โรมขนอุ้งเท้า/ท้อง/ก้น"> โรมขน
+              <label><input type="checkbox" name="service-addon" value="ไถขนอุ้งเท้า/ท้อง/ก้น"> ไถขน
                 (เท้า/ท้อง/ก้น)</label>
               <label><input type="checkbox" name="service-addon" value="เช็ดหู"> เช็ดหู</label>
               <label><input type="checkbox" name="service-addon" value="สางสังกะตัง"> สางสังกะตัง</label>
@@ -872,7 +874,7 @@
             <div style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 0.5rem; margin-top: 0.5rem;"
               id="checkin-addons-container">
               <label><input type="checkbox" name="checkin-service-addon" value="ตัดเล็บ"> ตัดเล็บ</label>
-              <label><input type="checkbox" name="checkin-service-addon" value="โรมขนอุ้งเท้า/ท้อง/ก้น"> โรมขน
+              <label><input type="checkbox" name="checkin-service-addon" value="ไถขนอุ้งเท้า/ท้อง/ก้น"> ไถขน
                 (เท้า/ท้อง/ก้น)</label>
               <label><input type="checkbox" name="checkin-service-addon" value="เช็ดหู"> เช็ดหู</label>
               <label><input type="checkbox" name="checkin-service-addon" value="สางสังกะตัง"> สางสังกะตัง</label>
