Display service durations in checkboxes

--- a/dashboard.html
+++ b/dashboard.html
@@ -721,22 +721,23 @@
           <div class="form-group">
             <label class="form-label required">บริการหลัก (เลือก 1 อย่าง)</label>
             <div style="display: flex; flex-direction: column; gap: 0.5rem; margin-top: 0.5rem;">
-              <label><input type="checkbox" name="service-type" value="อาบน้ำ"> อาบน้ำ</label>
+              <label><input type="checkbox" name="service-type" value="อาบน้ำ"> อาบน้ำ (1 ชม.)</label>
               <label><input type="checkbox" name="service-type" value="อาบน้ำ-ตัดขน ด้วยกรรไกร"> อาบน้ำ-ตัดขน
-                ด้วยกรรไกร</label>
+                ด้วยกรรไกร (2 ชม.)</label>
               <label><input type="checkbox" name="service-type" value="อาบน้ำ-ตัดขน ด้วยปัตตาเลี่ยน"> อาบน้ำ-ตัดขน
-                ด้วยปัตตาเลี่ยน</label>
-              <label><input type="checkbox" name="service-type" value="อาบน้ำ พร้อมทำสปา"> อาบน้ำ พร้อมทำสปา</label>
-              <label><input type="checkbox" name="service-type" value="หมาใหญ่"> หมาใหญ่</label>
+                ด้วยปัตตาเลี่ยน (2 ชม.)</label>
+              <label><input type="checkbox" name="service-type" value="อาบน้ำ พร้อมทำสปา"> อาบน้ำ พร้อมทำสปา (1.5
+                ชม.)</label>
+              <label><input type="checkbox" name="service-type" value="หมาใหญ่"> หมาใหญ่ (1 ชม.)</label>
               <label><input type="checkbox" name="service-type" value="ฝากเลี้ยง"> ฝากเลี้ยง</label>
-              <label><input type="checkbox" name="service-type" value="อื่นๆ"> อื่นๆ</label>
+              <label><input type="checkbox" name="service-type" value="อื่นๆ"> อื่นๆ (30 นาที)</label>
             </div>
           </div>
 
           <div class="form-group">
             <label class="form-label">บริการเสริม (Add-ons)</label>
             <div style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 0.5rem; margin-top: 0.5rem;">
-              <label><input type="checkbox" name="service-addon" value="ตัดเล็บ"> ตัดเล็บ</label>
+              <label><input type="checkbox" name="service-addon" value="ตัดเล็บ"> ตัดเล็บ (30 นาที)</label>
               <label><input type="checkbox" name="service-addon" value="ไถขนอุ้งเท้า/ท้อง/ก้น"> ไถขน
                 (เท้า/ท้อง/ก้น)</label>
               <label><input type="checkbox" name="service-addon" value="เช็ดหู"> เช็ดหู</label>
