Exclude add-ons from duration calculation and remove duration text from add-on checkboxes

--- a/dashboard.html
+++ b/dashboard.html
@@ -737,7 +737,7 @@
           <div class="form-group">
             <label class="form-label">บริการเสริม (Add-ons)</label>
             <div style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 0.5rem; margin-top: 0.5rem;">
-              <label><input type="checkbox" name="service-addon" value="ตัดเล็บ"> ตัดเล็บ (30 นาที)</label>
+              <label><input type="checkbox" name="service-addon" value="ตัดเล็บ"> ตัดเล็บ</label>
               <label><input type="checkbox" name="service-addon" value="ไถขนอุ้งเท้า/ท้อง/ก้น"> ไถขน
                 (เท้า/ท้อง/ก้น)</label>
               <label><input type="checkbox" name="service-addon" value="เช็ดหู"> เช็ดหู</label>
