--- a/dashboard.html
+++ b/dashboard.html
@@ -1113,6 +1113,16 @@
       </div>
     </div>
   </div>
+
+  <!-- Image Lightbox Modal -->
+  <div id="modal-lightbox" class="modal-overlay" style="z-index: 2000; background: rgba(0,0,0,0.9);">
+    <div class="modal-lightbox-content"
+      style="position: relative; width: 100%; height: 100%; display: flex; align-items: center; justify-content: center;">
+      <button class="modal-close-lightbox" onclick="app.closeModal('modal-lightbox')"
+        style="position: absolute; top: 20px; right: 20px; color: white; font-size: 2rem; background: none; border: none; cursor: pointer;">✕</button>
+      <img id="lightbox-image" src="" alt="Full view" style="max-width: 90%; max-height: 90%; object-fit: contain;">
+    </div>
+  </div>
   <script src="app.js"></script>
 </body>
 
