--- a/dashboard.html
+++ b/dashboard.html
@@ -1084,6 +1084,7 @@
 
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/heic2any/0.0.4/heic2any.min.js"></script>
   <script src="firebase-config.js"></script>
   <!-- Customer History Modal -->
   <div id="modal-customer-history" class="modal-overlay">
