--- a/dashboard.html
+++ b/dashboard.html
@@ -68,13 +68,16 @@
           <p>ผู้ดูแลระบบ</p>
         </div>
         <button class="btn-logout" onclick="app.logout()" title="ออกจากระบบ">
-          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"
-            stroke-linecap="round" stroke-linejoin="round">
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
             <polyline points="16 17 21 12 16 7"></polyline>
             <line x1="21" y1="12" x2="9" y2="12"></line>
           </svg>
         </button>
+      </div>
+      <div class="version-info" onclick="app.handleVersionClick()">
+        v5.0.0 (125)
       </div>
     </aside>
 
@@ -1078,6 +1081,33 @@
             <button type="submit" class="btn btn-primary">บันทึก</button>
           </div>
         </form>
+      </div>
+    </div>
+  </div>
+
+  <!-- Debug Modal -->
+  <div id="modal-debug" class="modal-overlay" style="z-index: 3000;">
+    <div class="modal" style="max-width: 800px; height: 80vh; display: flex; flex-direction: column;">
+      <div class="modal-header" style="flex-shrink: 0;">
+        <div style="display: flex; justify-content: space-between; align-items: center; width: 100%;">
+          <h3>System Logs</h3>
+          <div style="display: flex; gap: 10px;">
+            <button class="btn btn-secondary btn-sm" onclick="app.clearLogs()">Clear logs</button>
+            <button class="btn btn-secondary btn-sm" onclick="app.closeDebugModal()">Close</button>
+          </div>
+        </div>
+      </div>
+      <div class="debug-tabs"
+        style="padding: 10px 20px; border-bottom: 1px solid var(--border-color); display: flex; gap: 20px; background: #f8fafc; flex-shrink: 0;">
+        <span class="debug-tab active" onclick="app.filterLogs('all', this)">ALL</span>
+        <span class="debug-tab" onclick="app.filterLogs('http', this)">HTTP</span>
+        <span class="debug-tab" onclick="app.filterLogs('debug', this)">DEBUG</span>
+        <span class="debug-tab" onclick="app.filterLogs('info', this)">INFO</span>
+        <span class="debug-tab" onclick="app.filterLogs('error', this)">ERROR</span>
+      </div>
+      <div id="debug-log-container"
+        style="flex: 1; overflow-y: auto; padding: 10px; font-family: 'Courier New', Courier, monospace; font-size: 13px; background: #fff;">
+        <!-- Logs appear here -->
       </div>
     </div>
   </div>
