Implement queue editing functionality with UI refinements and bug fixes

--- a/dashboard.html
+++ b/dashboard.html
@@ -813,7 +813,7 @@
       </div>
       <div class="modal-footer">
         <button class="btn btn-secondary" onclick="app.closeModal('modal-queue')">ยกเลิก</button>
-        <button class="btn btn-primary" onclick="app.saveQueue()">เพิ่มคิว</button>
+        <button class="btn btn-primary" id="queue-save-btn" onclick="app.saveQueue()">เพิ่มคิว</button>
       </div>
     </div>
   </div>
