feat: add 'อาบ Set C' and 'อาบประกวด' services

--- a/dashboard.html
+++ b/dashboard.html
@@ -725,6 +725,8 @@
             <label class="form-label required">บริการหลัก (เลือก 1 อย่าง)</label>
             <div style="display: flex; flex-direction: column; gap: 0.5rem; margin-top: 0.5rem;">
               <label><input type="checkbox" name="service-type" value="อาบน้ำ"> อาบน้ำ (1 ชม.)</label>
+              <label><input type="checkbox" name="service-type" value="อาบ Set C"> อาบ Set C (1 ชม.)</label>
+              <label><input type="checkbox" name="service-type" value="อาบประกวด"> อาบประกวด (1 ชม.)</label>
               <label><input type="checkbox" name="service-type" value="อาบน้ำ-ตัดขน ด้วยกรรไกร"> อาบน้ำ-ตัดขน
                 ด้วยกรรไกร (2 ชม.)</label>
               <label><input type="checkbox" name="service-type" value="อาบน้ำ-ตัดขน ด้วยปัตตาเลี่ยน"> อาบน้ำ-ตัดขน
